Fixed contact icons on mobile

--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,12 @@ a:hover {
 
 .contacts {
   font-size: 17px;
-  margin: 27px 0 0 0;
+  margin: 27px 0 0 15px;
+  padding: 0 0 0 25px;
 }
 
 .address {
-  float: left;
-  clear: left;
+  margin: 0;
 }
 
 .contact-icon {
